# signite_k8s

./: .gitignore  README.md
backend/: docker-compose.yml  init-db.sh
backend/auth-service/: .env.example  Cargo.toml  Dockerfile  build.rs
backend/auth-service/src/: grpc.rs  main.rs
backend/auth-service/src/config/: mod.rs
backend/auth-service/src/controllers/: auth_controller.rs  mod.rs
backend/auth-service/src/db/: mod.rs  mysql.rs  users.rs
backend/auth-service/src/middlewares/: auth.rs
backend/auth-service/src/models/: mod.rs  user.rs
backend/auth-service/src/routes/: auth_routes.rs  health_routes.rs  mod.rs
backend/auth-service/src/services/: auth_service.rs
backend/mysql-init/: init.sql
backend/protos/: auth.proto
backend/sigboard-service/: Dockerfile  Dockerfile.dev  build.gradle
frontend/auth/: package.json  webpack.config.js
frontend/auth/public/: index.html
frontend/auth/src/: App.svelte
frontend/host/: package.json  webpack.config.js
frontend/host/public/: index.html
frontend/host/src/: App.tsx  index.css
frontend/sigboard/: package.json  webpack.config.js
frontend/sigboard/public/: index.html
frontend/sigboard/src/: App.tsx  index.css
k8s/: README.md  auth-service-test.yaml  deploy-local.sh  deploy-test.sh  ingress.yaml  kafka.yaml  mysql-init-configmap.yaml  mysql.yaml  namespace.yaml  postgres-init-configmap.yaml  postgres.yaml  secrets.yaml  sigboard-service-test.yaml
k8s/auth-service/: deployment.yaml  service.yaml
k8s/sigboard-service/: deployment.yaml  service.yaml
(+22 files in other folders)
