[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.29", features = ["serde"] }
argon2 = "0.5.2"
rand = "0.8.5"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
thiserror = "1.0.48"

# MySQL 관련 의존성
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }

# gRPC 관련 의존성
tonic = "0.9.2"
prost = "0.11.9"
futures = "0.3.28"
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.9.2"
